https://www.elastic.co/guide/en/apm/agent/java/current/release-notes.html[elastic.co]
endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

[[release-notes-1.28.3]]
==== 1.28.3 - YYYY/MM/DD

[float]
===== Features

[float]
===== Bug fixes

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.28.2]]
==== 1.28.2 - 2021/12/16

[float]
===== Dependency updates
* Update Log4j to 2.12.2

[float]
===== Features

[float]
===== Bug fixes
* Fix module loading errors on J9 JVM - {pull}2341[#2341]
* Fixing log4j configuration error - {pull}2343[#2343]

[[release-notes-1.28.1]]
==== 1.28.1 - 2021/12/10

[float]
===== Security 
* Fix for "Log4Shell" RCE 0-day exploit in log4j https://nvd.nist.gov/vuln/detail/CVE-2021-44228[CVE-2021-44228] - {pull}2332[#2332]

[float]
===== Features
* Added support to selectively enable instrumentations - {pull}2292[#2292]

[float]
===== Bug fixes
* Preferring controller names for Spring MVC transactions, `use_path_as_transaction_name` only as a fallback - {pull}2320[#2320]

[[release-notes-1.28.0]]
==== 1.28.0 - 2021/12/07

[float]
===== Features
* Adding experimental support for <<aws-lambda, AWS Lambda>> - {pull}1951[#1951]
* Now supporting tomcat 10 - {pull}2229[#2229]

[float]
===== Bug fixes
* Fix error with parsing APM Server version for 7.16+ - {pull}2313[#2313]

[[release-notes-1.27.1]]
==== 1.27.1 - 2021/11/30

[float]
===== Security
* Resolves Local Privilege Escalation issue https://discuss.elastic.co/t/apm-java-agent-security-update/291355[ESA-2021-30] https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2021-37942[CVE-2021-37942]

[float]
===== Features
* Add support to Jakarta EE for JSF - {pull}2254[#2254]

[float]
===== Bug fixes
* Fixing missing Micrometer metrics in Spring boot due to premature initialization - {pull}2255[#2255]